Se ajusta texto en contenedores de Xbox slim y one

--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -33,25 +33,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb- mb-lg-2" style="font-size: 20px; padding-left: 110px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="../nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   consolas
                 </a>
                 <ul class="dropdown-menu" style="font-size: 20px; ">
-                  <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
-                  <li><a class="dropdown-item" href="./compras/consolasplayStation.html">Play Station</a></li>
-                  <li><a class="dropdown-item" href="consolas_nintendoSwitch.html">Nintendo Switch</a></li>
-                  <li><a class="dropdown-item" href="consolas_retro.html">Consolas retro</a></li>
+                  <li><a class="dropdown-item" href="consolasxbox.html">Xbox</a></li>
+                  <li><a class="dropdown-item" href="consolasplayStation.html">Play Station</a></li>
+                  <li><a class="dropdown-item" href="consolasnitendoSwitch.html">Nintendo Switch</a></li>
+                  <li><a class="dropdown-item" href="consolasretro.html">Consolas retro</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="consolas.html">Todas las consolas</a></li>
+                  <li><a class="dropdown-item" href="../consolas.html">Todas las consolas</a></li>
                 </ul>
                 <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contactanos</a>
+                  <a class="nav-link" href="../contacto.html">Contactanos</a>
                 </li>
             </ul>
             
@@ -84,13 +84,13 @@
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">XBOX ONE Series S | X</span>
-                <img src="https://s1.cel.ro/images/mari/2022/09/10/consola-xbox-one-x-1-tb-black-second-hand-sh-cxox041400.jpg" alt="" class="img-item">
+                <span class="titulo-item">XBOX ONE Series S </span>
+                <img src="https://s1.cel.ro/images/mari/2022/09/10/consola-xbox-one-x-1-tb-black-second-hand-sh-cxox041400.jpg" alt="" class="img-item" style="width: 100%;">
                 <span class="precio-item">$2.500.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">XBOX 360 Series SLIM | E</span>
+                <span class="titulo-item">XBOX SLIM </span>
                 <img src="https://m.media-amazon.com/images/I/61oFqsoj9nL.jpg" alt="" class="img-item">
                 <span class="precio-item">$800.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
