--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -19,7 +19,7 @@
     <!-- Link para el formulario y el footer -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
    
-    <title>Armor Games - tienda | </title>
+    <title>Armor Games - tienda</title>
 </head>
 <body>
     <header class="header">
@@ -60,13 +60,13 @@
               <li><i class="fa-solid fa-user" style="color: gray; height: 50px;"></i><a href="./inicioSesion/login.html"></span>Iniciar sesion - </a></li>
               <li></i><a href="./inicioSesion/signup.html"></span>Registrase</a></li>
               </ul>
-            
+                       
           </div>
         </div>
-      </nav>
-  
+      </nav>  
       <!-- Navbar -->  
-        <h1>Armor Games - tienda</h1>
+
+      <h1>Armor Games - tienda</h1>
     </header>
     <section class="contenedor">
         <!-- Contenedor de elementos -->
