--- a/consolas.html
+++ b/consolas.html
@@ -116,7 +116,7 @@
               <h5 class="card-title">XBOX S|X</h5>
               <p class="card-text">Desde COP 3'000.000</p>
               <a
-                href="./consolas_xbox.html"
+                href="./compras/consolasxbox.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -146,7 +146,7 @@
               <h5 class="card-title">PS5</h5>
               <p class="card-text"> Desde COP 2'500.000</p>
               <a
-                href="./consolas_playStation.html"
+                href="./compras/consolasplayStation.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -176,7 +176,7 @@
               <h5 class="card-title">NINTENDO SWITCH</h5>
               <p class="card-text">Desde COP 1'200.000</p>
               <a
-                href="./consolas_nintendoSwitch.html"
+                href="./compras/consolasnitendoSwitch.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
@@ -206,7 +206,7 @@
               <h5 class="card-title">CONSOLAS RETRO</h5>
               <p class="card-text">Desde COP 400.000</p>
               <a
-                href="./consolas_retro.html"
+                href="./compras/consolasretro.html"
                 class="btn btn-primary"
                 data-mdb-ripple-init
                 >Comprar</a
