--- a/contacto.html
+++ b/contacto.html
@@ -39,10 +39,10 @@
                 consolas
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
-                <li><a class="dropdown-item" href="consolas_xbox.html">Xbox</a></li>
-                <li><a class="dropdown-item" href="consolas_playStation.html">Play Station</a></li>
-                <li><a class="dropdown-item" href="consolas_nintendoSwitch.html">Nintendo Switch</a></li>
-                <li><a class="dropdown-item" href="consolas_retro.html">Consolas retro</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">Play Station</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasnitendoSwitch.html">Nintendo Switch</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasretro.html">Consolas retro</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="consolas.html">Todas las consolas</a></li>
               </ul>
