--- a/contacto.html
+++ b/contacto.html
@@ -100,19 +100,19 @@
         <!-- Name input -->
         <div data-mdb-input-init class="form-outline mb-4">
           <input type="text" id="form4Example1" class="form-control" />
-          <label class="form-label" for="form4Example1">Name</label>
+          <label class="form-label" for="form4Example1">Nombre</label>
         </div>
 
         <!-- Email input -->
         <div data-mdb-input-init class="form-outline mb-4">
           <input type="email" id="form4Example2" class="form-control" />
-          <label class="form-label" for="form4Example2">Email address</label>
+          <label class="form-label" for="form4Example2">Correo electronico</label>
         </div>
 
         <!-- Message input -->
         <div data-mdb-input-init class="form-outline mb-4">
           <textarea class="form-control" id="form4Example3" rows="4"></textarea>
-          <label class="form-label" for="form4Example3">Message</label>
+          <label class="form-label" for="form4Example3">Mensaje</label>
         </div>
 
         <!-- Checkbox -->
@@ -125,7 +125,7 @@
             checked
           />
           <label class="form-check-label" for="form4Example4">
-            Send me a copy of this message
+            Enviarme una copia de este mensaje
           </label>
         </div>
 
