Se modifica texto menu consolas de c a C

--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -40,7 +40,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  consolas
+                  Consolas
                 </a>
                 <ul class="dropdown-menu" style="font-size: 20px; ">
                   <li><a class="dropdown-item" href="consolasxbox.html">Xbox</a></li>
@@ -66,7 +66,7 @@
       </nav>  
       <!-- Navbar -->  
 
-      <h1>Armor Games - tienda</h1>
+      <h1>X-Box</h1>
     </header>
     <section class="contenedor">
         <!-- Contenedor de elementos -->
