--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                consolas
+                Consolas
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
                 <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
@@ -281,6 +281,9 @@
 
       <div class="btn_consolas">
         <a href="consolas.html">Compra aqui</a>
+      </div>
+      <div class="btn_consolas">
+        <a href="https://web.whatsapp.com/">Contacte a un asesor</a>
       </div>
       
     </div>
