--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -38,7 +38,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  consolas
+                  Consolas
                 </a>
                 <ul class="dropdown-menu" style="font-size: 20px; ">
                   <li><a class="dropdown-item" href="consolasxbox.html">Xbox</a></li>
@@ -64,7 +64,7 @@
       </nav>  
       <!-- Navbar -->  
     <header>
-        <h1>Armor Games - tienda</h1>
+        <h1>Play Station</h1>
     </header>
     <section class="contenedor">
         <!-- Contenedor de elementos -->
