--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                consolas
+                Consolas
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
                 <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
