Se agregan enlaces a los botones del footer

--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -165,7 +165,7 @@
               data-mdb-ripple-init
               class="btn text-white btn-floating m-1"
               style="background-color: #3b5998"
-              href="#!"
+              href="https://www.facebook.com/"
               role="button"
               ><i class="fab fa-facebook-f"></i
             ></a>
@@ -175,7 +175,7 @@
               data-mdb-ripple-init
               class="btn text-white btn-floating m-1"
               style="background-color: #55acee"
-              href="#!"
+              href="https://x.com/"
               role="button"
               ><i class="fab fa-twitter"></i
             ></a>
@@ -185,7 +185,7 @@
               data-mdb-ripple-init
               class="btn text-white btn-floating m-1"
               style="background-color: #ac2bac"
-              href="#!"
+              href="https://www.instagram.com/"
               role="button"
               ><i class="fab fa-instagram"></i
             ></a>
