--- a/contacto.html
+++ b/contacto.html
@@ -80,7 +80,7 @@
               <a 
                 data-mdb-ripple-init
                 class="btn btn-outline-light btn-lg"
-                href="#!"
+                href="https://web.whatsapp.com/"
                 role="button"
                 >Contacta a un asesor</a
               >
@@ -151,7 +151,7 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #3b5998"
-            href="#!"
+            href="https://www.facebook.com/"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
@@ -161,7 +161,7 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #55acee"
-            href="#!"
+            href="https://x.com/"
             role="button"
             ><i class="fab fa-twitter"></i
           ></a>
@@ -171,7 +171,7 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #ac2bac"
-            href="#!"
+            href="https://www.instagram.com/"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
