--- a/nosotros.html
+++ b/nosotros.html
@@ -266,7 +266,7 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #55acee"
-            href="#!"
+            href="https://x.com/"
             role="button"
             ><i class="fab fa-twitter"></i
           ></a>
@@ -276,7 +276,7 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #ac2bac"
-            href="#!"
+            href="https://www.instagram.com/"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
