--- a/index.html
+++ b/index.html
@@ -340,15 +340,15 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
+        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/"
           role="button"><i class="fab fa-facebook-f"></i></a>
 
         <!-- Twitter -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
+        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://x.com/"
           role="button"><i class="fab fa-twitter"></i></a>
 
         <!-- Instagram -->
-        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
+        <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/"
           role="button"><i class="fab fa-instagram"></i></a>
       </section>
       <!-- Section: Social media -->
