Se agrega icono de red social X en el footer

--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -178,7 +178,7 @@
               style="background-color: #55acee"
               href="https://x.com/"
               role="button"
-              ><i class="fab fa-twitter"></i
+              ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
             <!-- Instagram -->
