--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -167,7 +167,7 @@
               style="background-color: #3b5998"
               href="https://www.facebook.com/"
               role="button"
-              ><i class="fab fa-facebook-f"></i
+              ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
             <!-- Twitter -->
