--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
         <!-- Twitter -->
         <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://x.com/"
-          role="button"><i class="fab fa-twitter"></i></a>
+          role="button"><i class="fa-brands fa-x-twitter"></i></a>
 
         <!-- Instagram -->
         <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/"
