--- a/nosotros.html
+++ b/nosotros.html
@@ -268,8 +268,8 @@
             style="background-color: #55acee"
             href="https://x.com/"
             role="button"
-            ><i class="fab fa-twitter"></i
-          ></a>
+            ><i class="fa-brands fa-x-twitter"></i>
+          </a>
 
           <!-- Instagram -->
           <a
