Se ajustan imagenes de consolas agregando padding bottom y top desde la etiqueta img

--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -78,19 +78,19 @@
             </div>
             <div class="item">
                 <span class="titulo-item">PLAY STATION 4</span>
-                <img src="https://m.media-amazon.com/images/I/71PGvPXpk5L.jpg" alt="" class="img-item">
+                <img style="padding-bottom: 25px; padding-top: 20px;" src="https://m.media-amazon.com/images/I/71PGvPXpk5L.jpg" alt="" class="img-item">
                 <span class="precio-item">$3.000.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
                 <span class="titulo-item">PLAY STATION 3</span>
-                <img src="https://i5.walmartimages.com/seo/Restored-Sony-PlayStation-3-PS3-Slim-320GB-Video-Game-Console-Black-Controller-with-HDMI-Refurbished_5711c5de-b927-4489-b556-6a694ea16e31.33dcede2b48eec9947e26003a5b2c413.jpeg" alt="" class="img-item">
+                <img style="padding-bottom: 25px; padding-top: 0px;" src="https://i5.walmartimages.com/seo/Restored-Sony-PlayStation-3-PS3-Slim-320GB-Video-Game-Console-Black-Controller-with-HDMI-Refurbished_5711c5de-b927-4489-b556-6a694ea16e31.33dcede2b48eec9947e26003a5b2c413.jpeg" alt="" class="img-item">
                 <span class="precio-item">$2.500.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
                 <span class="titulo-item">PLAY STATION 2</span>
-                <img src="https://m.media-amazon.com/images/I/61pETE6v4vL.jpg" alt="" class="img-item">
+                <img style="padding-bottom: 25px; padding-top: 0px;" src="https://m.media-amazon.com/images/I/61pETE6v4vL.jpg" alt="" class="img-item">
                 <span class="precio-item">$800.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
@@ -177,7 +177,7 @@
               style="background-color: #55acee"
               href="https://x.com/"
               role="button"
-              ><i class="fab fa-twitter"></i
+              ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
             <!-- Instagram -->
