--- a/compras/consolasretro.html
+++ b/compras/consolasretro.html
@@ -85,13 +85,13 @@
             </div>
 		<div class="item">
                 <span class="titulo-item">MNINTENDO CLASSIC FAMILY</span>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_640456-MCO70221146488_062023-F.webp" alt="" class="img-item">
+                <img style="padding-bottom: 10px; padding-top: 5px;" src="https://http2.mlstatic.com/D_NQ_NP_2X_640456-MCO70221146488_062023-F.webp" alt="" class="img-item">
                 <span class="precio-item">$2.500.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
 		<div class="item">
                 <span class="titulo-item">SEGA</span>
-                <img src="https://http2.mlstatic.com/D_NQ_NP_2X_840636-MLA45732923831_042021-F.webp" alt="" class="img-item">
+                <img style="padding-bottom: 15px; padding-top: 30px;" src="https://http2.mlstatic.com/D_NQ_NP_2X_840636-MLA45732923831_042021-F.webp" alt="" class="img-item">
                 <span class="precio-item">$800.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
