--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -73,19 +73,19 @@
         <div class="contenedor-items">
           <div class="item">
             <span class="titulo-item">XBOX X</span>
-            <img src="https://assets.xboxservices.com/assets/12/7e/127e5830-82cb-4f6c-beef-4f9a0c970430.jpg?n=Consoles-Hub_Content-Placement_Hub-SX_788x444.jpg" alt="" class="img-item">
+            <img style="padding-bottom: 25px; padding-top: 40px;" src="https://assets.xboxservices.com/assets/12/7e/127e5830-82cb-4f6c-beef-4f9a0c970430.jpg?n=Consoles-Hub_Content-Placement_Hub-SX_788x444.jpg" alt="" class="img-item">
             <span class="precio-item">$3.000.000</span>
             <button class="boton-item">Agregar al Carrito</button>
         </div>
             <div class="item">
                 <span class="titulo-item">XBOX S</span>
-                <img src="https://assets.xboxservices.com/assets/fc/28/fc283911-f016-42d5-8e51-0dfca7ab5ce1.jpg?n=Shop-Consoles_Content-Placement_Hub_294958693_788x444.jpg" alt="" class="img-item">
+                <img style="padding-bottom: 25px; padding-top: 40px;" src="https://assets.xboxservices.com/assets/fc/28/fc283911-f016-42d5-8e51-0dfca7ab5ce1.jpg?n=Shop-Consoles_Content-Placement_Hub_294958693_788x444.jpg" alt="" class="img-item">
                 <span class="precio-item">$3.000.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
+                <button class="boton-item" >Agregar al Carrito</button>
             </div>
             <div class="item">
                 <span class="titulo-item">XBOX ONE Series S </span>
-                <img src="https://s1.cel.ro/images/mari/2022/09/10/consola-xbox-one-x-1-tb-black-second-hand-sh-cxox041400.jpg" alt="" class="img-item" style="width: 100%;">
+                <img src="https://s1.cel.ro/images/mari/2022/09/10/consola-xbox-one-x-1-tb-black-second-hand-sh-cxox041400.jpg" alt="" class="img-item" >
                 <span class="precio-item">$2.500.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
