Se cambia color boton agregar carrito a color azul, se cambia color tu carrito a azul, se ajusta header de pestaña consolas incluyendo boton contacto

--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -63,9 +63,32 @@
         </div>
       </nav>  
       <!-- Navbar -->  
-    <header>
-        <h1>Play Station</h1>
-    </header>
+       <!-- Background image -->
+      <div
+      class="p-5 text-center bg-image"
+      style="
+        background-image: url('https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2016/04/585858-ps5-sony-no-esta-segura-playstation-5.jpg?tf=1200x');
+        height: 400px;
+      "
+    >
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
+        <div class="d-flex justify-content-center align-items-center h-100">
+          <div class="text-white">
+            <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">EXPERIENCIA UNICA CON TU PLAYSTATION</h1>
+            <h4 class="mb-3">Dale en comprar o contactanos</h4>
+            <a
+              data-mdb-ripple-init
+              class="btn btn-outline-light btn-lg"
+              href="https://web.whatsapp.com/"
+              role="button"
+              >Contacta a un asesor</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- final Background image -->
+ 
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
