--- a/compras/consolasretro.html
+++ b/compras/consolasretro.html
@@ -64,9 +64,32 @@
     </div>
   </nav>  
   <!-- Navbar -->  
-    <header class="header"> 
-        <h1>Consolas Retro</h1>
-      </header>
+   <!-- Background image -->
+   <div
+   class="p-5 text-center bg-image"
+   style="
+     background-image: url('https://pbs.twimg.com/media/C2BeXTOWgAAEago?format=jpg&name=small');
+     height: 400px;
+   "
+ >
+   <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
+     <div class="d-flex justify-content-center align-items-center h-100">
+       <div class="text-white">
+         <h1 class="mb-3" style="text-align: center; font-size: 47px; font-weight: 600;">NO PUEDEN FALTAR EL INICIO DE TODO</h1>
+         <h4 class="mb-3">Dale en comprar o contactanos</h4>
+         <a
+           data-mdb-ripple-init
+           class="btn btn-outline-light btn-lg"
+           href="https://web.whatsapp.com/"
+           role="button"
+           >Contacta a un asesor</a
+         >
+       </div>
+     </div>
+   </div>
+ </div>
+ <!-- final Background image -->
+   
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
