--- a/compras/consolasnitendoSwitch.html
+++ b/compras/consolasnitendoSwitch.html
@@ -25,7 +25,7 @@
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="" style="height: 70px; width: 70px;"></a>
+          <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="" style="height: 90px; width: 100px; margin-left: 100px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
