Se agrega la propiedad target a los enlaces de whatsapp en contacta a un asesor para abrir en otra pestaña

--- a/contacto.html
+++ b/contacto.html
@@ -82,6 +82,7 @@
                 class="btn btn-outline-light btn-lg"
                 href="https://web.whatsapp.com/"
                 role="button"
+                target="_blank"
                 >Contacta a un asesor</a
               >
             </div>
