--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <a href="consolas.html">Compra aqui</a>
       </div>
       <div class="btn_consolas">
-        <a href="https://web.whatsapp.com/">Contacte a un asesor</a>
+        <a href="https://web.whatsapp.com/" target="_blank">Contacte a un asesor</a>
       </div>
       
     </div>
