--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -84,6 +84,7 @@
                 class="btn btn-outline-light btn-lg"
                 href="https://web.whatsapp.com/"
                 role="button"
+                target="_blank"
                 >Contacta a un asesor</a
               >
             </div>
