Se agrega propiedad blank a los enlaces de redes en el footer con el fin de abrir el enlace en una pestaña nueva

--- a/contacto.html
+++ b/contacto.html
@@ -154,6 +154,7 @@
             style="background-color: #3b5998"
             href="https://www.facebook.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-facebook-f"></i
           ></a>
 
@@ -164,6 +165,7 @@
             style="background-color: #55acee"
             href="https://x.com/"
             role="button"
+            target="_blank"
             ><i class="fa-brands fa-x-twitter"></i
           ></a>
 
@@ -174,6 +176,7 @@
             style="background-color: #ac2bac"
             href="https://www.instagram.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
         </section>
