--- a/index.html
+++ b/index.html
@@ -341,15 +341,15 @@
       <section class="mb-4">
         <!-- Facebook -->
         <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/"
-          role="button"><i class="fab fa-facebook-f"></i></a>
+          role="button" target="_blank"><i class="fab fa-facebook-f"></i></a>
 
         <!-- Twitter -->
         <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #55acee" href="https://x.com/"
-          role="button"><i class="fa-brands fa-x-twitter"></i></a>
+          role="button" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
 
         <!-- Instagram -->
         <a data-mdb-ripple-init class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/"
-          role="button"><i class="fab fa-instagram"></i></a>
+          role="button" target="_blank"><i class="fab fa-instagram"></i></a>
       </section>
       <!-- Section: Social media -->
     </div>
