--- a/nosotros.html
+++ b/nosotros.html
@@ -256,8 +256,9 @@
             data-mdb-ripple-init
             class="btn text-white btn-floating m-1"
             style="background-color: #3b5998"
-            href="#!"
+            href="https://www.facebook.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-facebook-f"></i
           ></a>
 
@@ -268,6 +269,7 @@
             style="background-color: #55acee"
             href="https://x.com/"
             role="button"
+            target="_blank"
             ><i class="fa-brands fa-x-twitter"></i>
           </a>
 
@@ -278,6 +280,7 @@
             style="background-color: #ac2bac"
             href="https://www.instagram.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
         </section>
