--- a/compras/consolasplayStation.html
+++ b/compras/consolasplayStation.html
@@ -191,6 +191,7 @@
               style="background-color: #3b5998"
               href="https://www.facebook.com/"
               role="button"
+              target="_blank"
               ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
@@ -201,6 +202,7 @@
               style="background-color: #55acee"
               href="https://x.com/"
               role="button"
+              target="_blank"
               ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
@@ -211,6 +213,7 @@
               style="background-color: #ac2bac"
               href="https://www.instagram.com/"
               role="button"
+              target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
           </section>
