--- a/compras/consolasretro.html
+++ b/compras/consolasretro.html
@@ -198,6 +198,7 @@
               style="background-color: #3b5998"
               href="https://www.facebook.com/"
               role="button"
+              target="_blank"
               ><i class="fab fa-facebook-f"></i
             ></a>
   
@@ -208,6 +209,7 @@
               style="background-color: #55acee"
               href="https://x.com/"
               role="button"
+              target="_blank"
               ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
@@ -218,6 +220,7 @@
               style="background-color: #ac2bac"
               href="https://www.instagram.com/"
               role="button"
+              target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
           </section>
