--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -192,6 +192,7 @@
               style="background-color: #3b5998"
               href="https://www.facebook.com/"
               role="button"
+              target="_blank"
               ><i class="fab fa-facebook-f"></i
             ></a>
   
@@ -202,6 +203,7 @@
               style="background-color: #55acee"
               href="https://x.com/"
               role="button"
+              target="_blank"
               ><i class="fa-brands fa-x-twitter"></i
             ></a>
   
@@ -212,6 +214,7 @@
               style="background-color: #ac2bac"
               href="https://www.instagram.com/"
               role="button"
+              target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
           </section>
