--- a/consolas.html
+++ b/consolas.html
@@ -231,6 +231,7 @@
             style="background-color: #3b5998"
             href="https://www.facebook.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-facebook-f"></i
           ></a>
 
@@ -241,6 +242,7 @@
             style="background-color: #55acee"
             href="https://x.com/"
             role="button"
+            target="_blank"
             ><i class="fa-brands fa-x-twitter"></i
           ></a>
 
@@ -251,6 +253,7 @@
             style="background-color: #ac2bac"
             href="https://www.instagram.com/"
             role="button"
+            target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
         </section>
