Se agregan href a los enlaces de redes sociales del equipo de trabajo

--- a/nosotros.html
+++ b/nosotros.html
@@ -132,16 +132,16 @@
                 <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
-                <h4>Nombre Apellido</h4>
+                <h4>Danilo Rodriguez</h4>
                 <span>Diseñador UI/UX</span>
                 <p>
                   Explicabo voluptatem mollitia et repellat qui dolorum quasi
                 </p>
                 <div class="social">
-                  <a href=""><i class="fab fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fab fa-facebook"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""> <i class="fab fab fa-linkedin"></i> </a>
+                  <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="https://www.facebook.com/" target="_blank"><i class="fab fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fab fa-linkedin"></i> </a>
                 </div>
               </div>
             </div>
@@ -154,17 +154,17 @@
                 <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
-                <h4>Sebastian</h4>
+                <h4>Sebastian Martinez</h4>
                 <span>BackEnd Developer
                   Líder Técnico</span>
                 <p>
                   Aut maiores voluptates amet et quis praesentium qui senda para
                 </p>
                 <div class="social">
-                  <a href=""><i class="fab fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fab fa-facebook"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""><i class="fab fab fa-linkedin"></i> </a>
+                  <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="https://www.facebook.com/" target="_blank"><i class="fab fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/" target="_blank"><i class="fab fab fa-linkedin"></i> </a>
                 </div>
               </div>
             </div>
@@ -177,17 +177,17 @@
                 <img src="img/team/team-1.jpg" class="img-fluid" alt="" />
               </div>
               <div class="member-info">
-                <h4>J J</h4>
+                <h4>Jhon Lozano</h4>
                 <span>BackEnd Developer
                   Scrum Master</span>
                 <p>
                   Quisquam facilis cum velit laborum corrupti fuga rerum quia
                 </p>
                 <div class="social">
-                  <a href=""><i class="fab fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fab fa-facebook"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""> <i class="fab fab fa-linkedin"></i> </a>
+                  <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="https://www.facebook.com/" target="_blank"><i class="fab fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fab fa-linkedin"></i> </a>
                 </div>
               </div>
             </div>
@@ -206,10 +206,10 @@
                   Soy un apasionado desarrollador web frontend con un enfoque único en la creación de experiencias cautivadoras.
                 </p>
                 <div class="social">
-                  <a href=""><i class="fab fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fab fa-facebook"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""> <i class="fab fab fa-linkedin"></i> </a>
+                  <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="https://www.facebook.com/" target="_blank"><i class="fab fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fab fa-linkedin"></i> </a>
                 </div>
               </div>
             </div>
@@ -229,10 +229,10 @@
                   Dolorum tempora officiis odit laborum officiis et et accusamus
                 </p>
                 <div class="social">
-                  <a href=""><i class="fab fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fab fa-facebook"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                  <a href=""> <i class="fab fab fa-linkedin"></i> </a>
+                  <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="https://www.facebook.com/" target="_blank"><i class="fab fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fab fa-linkedin"></i> </a>
                 </div>
               </div>
             </div>
