Se agrega enlace de formspree.io a la seccion de contacto

--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
           </div>
         </div>
 
-        <form style="max-width: 580px;">
+        <form style="max-width: 580px;" action="https://formspree.io/f/xnnaaeyr" method="POST" autocomplete="off">
+          
           <h2 class="titulo_contacto" style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >CONTACTANOS</h2>
           <br /><br />
           <!-- Name input -->
@@ -456,9 +457,7 @@
           </div>
     
           <!-- Submit button -->
-          <button data-mdb-ripple-init type="button" class="btn btn-primary btn-block mb-4">
-            Enviar
-          </button>
+          <input class="btn btn-primary btn-block mb-4" type="submit" value="Enviar">
         </form>
 
       </div>
