se ajustas margin top de productos y contacto

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </header>
 
   <!-- Services Section -->
-  <section id="services" class="services section light-background" style="margin: 100px">
+  <section id="services" class="services section light-background" style="margin-top: 130px">
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
       <h2 style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >PRODUCTOS</h2>
@@ -202,7 +202,7 @@
 <div class="carrusel">
 
   <div class="container section-title" data-aos="fade-up">
-    <h2 style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >JUEGOS XBOX</h2>
+    <h2 style="text-align: center; font-size: 35px; font-weight: 600; color: black; margin-top: 50px;" >JUEGOS XBOX</h2>
     <p style="text-align: center; font-size: 24px;">
       Tenemos los videojuegos mas populares para tu X-Box, Pregunta por nuestra variedad de video juegos 
     </p>
@@ -246,7 +246,7 @@
 
 
   <div class="container section-title" data-aos="fade-up">
-    <h2 style="text-align: center; font-size: 35px; font-weight: 600; color: black; margin-top: 50px; " >JUEGOS PlayStation</h2>
+    <h2 style="text-align: center; font-size: 35px; font-weight: 600; color: black;" >JUEGOS PlayStation</h2>
     <p style="text-align: center; font-size: 24px;">
       Tenemos los videojuegos mas populares para tu PlayStation, Pregunta por nuestra variedad de video juegos 
     </p>
@@ -466,7 +466,7 @@
  </section><!-- /Contact Section -->
 
    <!-- Footer -->
-   <footer class="bg-body-tertiary text-center">
+   <footer class="bg-body-tertiary text-center" style="margin-top: 120px;">
      <!-- Grid container -->
      <div class="container p-4 pb-0">
        <!-- Section: Social media -->
@@ -509,10 +509,7 @@
      <!-- Grid container -->
 
      <!-- Copyright -->
-     <div
-       class="text-center p-3"
-       style="background-color: rgba(0, 0, 0, 0.05)"
-     >
+     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05)">
        © 2024 Copyright:
        <a class="text-body" href="https://mdbootstrap.com/">Armor Games</a>
      </div>
