--- a/nosotros.html
+++ b/nosotros.html
@@ -248,7 +248,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary text-center">
       <!-- Grid container -->
-      <div class="container p-4 pb-0">
+      <div class="container p-4 pb-0" style="margin: 25px;">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
