Se agrega checkbox y pdf con enlace a terminos y condiciones en la sección y pestaña de formulario

--- a/index.html
+++ b/index.html
@@ -450,11 +450,17 @@
    
          <!-- Checkbox -->
          <div class="form-check d-flex justify-content-center mb-4">
-           <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
-           <label class="form-check-label" for="form4Example4">
-             Enviame una copia de este mensaje
-           </label>
-         </div>
+          <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked/>
+          <label class="form-check-label" for="form4Example4">
+            Enviame una copia de este mensaje
+          </label>
+        </div>  
+        <div class="form-check d-flex justify-content-center mb-4">
+          <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" required />
+          <label class="form-check-label" for="form4Example4">
+            Aceptar los <a href="Términos y Condiciones.pdf" target="_blank">Términos y Condiciones</a>
+          </label>
+        </div>  
    
          <!-- Submit button -->
          <input class="btn btn-primary btn-block mb-4" type="submit" value="Enviar">
