Se ajusta el margin top del footer al margin bottom de la ultima sección en cada pestaña

--- a/compras/consolasnitendoSwitch.html
+++ b/compras/consolasnitendoSwitch.html
@@ -92,7 +92,7 @@
     </div>
     <!-- final Background image -->
     
-    <section class="contenedor">
+    <section class="contenedor" style="margin-bottom: 25px;">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
             
@@ -172,7 +172,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary text-center">
         <!-- Grid container -->
-        <div class="container p-4 pb-0" style="margin: 25px;">
+        <div class="container p-4 pb-0" >
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
