--- a/nosotros.html
+++ b/nosotros.html
@@ -124,7 +124,7 @@
       </div>
       <!-- End Section Title -->
 
-      <div class="container">
+      <div class="container" style="margin-bottom: 25px;">
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
@@ -246,9 +246,9 @@
     
 
     <!-- Footer -->
-    <footer class="bg-body-tertiary text-center">
+    <footer class="bg-body-tertiary text-center" >
       <!-- Grid container -->
-      <div class="container p-4 pb-0" style="margin: 25px;">
+      <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
