--- a/compras/consolasxbox.html
+++ b/compras/consolasxbox.html
@@ -92,7 +92,7 @@
         </div>
       </div>    
 
-    <section class="contenedor">
+    <section class="contenedor" style="margin-bottom: 25px;">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
           <div class="item">
@@ -182,7 +182,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary text-center">
         <!-- Grid container -->
-        <div class="container p-4 pb-0" style="margin: 25px;">
+        <div class="container p-4 pb-0">
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
