--- a/consolas.html
+++ b/consolas.html
@@ -93,7 +93,7 @@
 
     <br /><br />
 
-    <section class="productos_consolas">
+    <section class="productos_consolas" style="margin-bottom: 25px;">
       <div class="row">
         <div class="col-sm-3">
           <div class="card">
@@ -221,7 +221,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary text-center">
       <!-- Grid container -->
-      <div class="container p-4 pb-0" style="margin: 25px;">
+      <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
