--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
   
     <!-- Contact Section -->
      <br>
-  <section id="contact" class="contact section">
+  <section id="contact" class="contact section" style="margin-bottom: 25px;">
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
@@ -184,7 +184,7 @@
     <!-- Footer -->
     <footer class="bg-body-tertiary text-center" >
       <!-- Grid container -->
-      <div class="container p-4 pb-0" style="margin: 25px;">
+      <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
