--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <li><a class="dropdown-item" href="consolas.html">Todas las consolas</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="./compras/juegosXbox.html">Juegos Xbox</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./compras/juegosPlayStation.html">Juegos PlayStation</a></li>
               </ul>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contactanos</a>
