Se ajusta menu con las opciones de videojuegos play y xbox en cada pestaña de la pagina

--- a/compras/consolasnitendoSwitch.html
+++ b/compras/consolasnitendoSwitch.html
@@ -43,11 +43,15 @@
                 </a>
                 <ul class="dropdown-menu" style="font-size: 20px; ">
                   <li><a class="dropdown-item" href="consolasxbox.html">Xbox</a></li>
-                  <li><a class="dropdown-item" href="consolasplayStation.html">Play Station</a></li>
+                  <li><a class="dropdown-item" href="consolasplayStation.html">PlayStation</a></li>
                   <li><a class="dropdown-item" href="consolasnitendoSwitch.html">Nintendo Switch</a></li>
                   <li><a class="dropdown-item" href="consolasretro.html">Consolas retro</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="../consolas.html">Todas las consolas</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="juegosXbox.html">Juegos Xbox</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="juegosPlayStation.html">Juegos PlayStation</a></li>
                 </ul>
                 <li class="nav-item">
                   <a class="nav-link" href="../contacto.html">Contactanos</a>
