--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
                 <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
-                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">Play Station</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">PlayStation</a></li>
                 <li><a class="dropdown-item" href="./compras/consolasnitendoSwitch.html">Nintendo Switch</a></li>
                 <li><a class="dropdown-item" href="./compras/consolasretro.html">Consolas retro</a></li>
                 <li><hr class="dropdown-divider"></li>
@@ -284,7 +284,7 @@
   </section>
 
   <div class="btn_consolas">
-    <a href="consolas.html">Compra aqui</a>
+    <a href="./compras/juegosXbox.html">Compra aqui</a>
   </div>
   
   <section class="icons container">
@@ -378,7 +378,7 @@
   </section>
   
   <div class="btn_consolas">
-    <a href="consolas.html">Compra aqui</a>
+    <a href="./compras/juegosPlayStation.html">Compra aqui</a>
   </div>
 
   <section class="icons container">
