--- a/contacto.html
+++ b/contacto.html
@@ -40,11 +40,15 @@
               </a>
               <ul class="dropdown-menu" style="font-size: 20px; ">
                 <li><a class="dropdown-item" href="./compras/consolasxbox.html">Xbox</a></li>
-                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">Play Station</a></li>
+                <li><a class="dropdown-item" href="./compras/consolasplayStation.html">PlayStation</a></li>
                 <li><a class="dropdown-item" href="./compras/consolasnitendoSwitch.html">Nintendo Switch</a></li>
                 <li><a class="dropdown-item" href="./compras/consolasretro.html">Consolas retro</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="consolas.html">Todas las consolas</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./compras/juegosXbox.html">Juegos Xbox</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./compras/juegosPlayStation.html">Juegos PlayStation</a></li>
               </ul>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contactanos</a>
